@@ -1,5 +1,13 @@
 2007-05-04  Jorn Baayen  <jorn@openedhand.com>
 
+	* libgssdp/gssdp-resource-browser.c: (received_announcement):
+	* libgssdp/gssdp-resource-group.c: (message_received_cb),
+	(discovery_response_timeout), (discovery_response_free):
+
+	More "ssdp:all" work - should be all good now.
+
+2007-05-04  Jorn Baayen  <jorn@openedhand.com>
+
 	* libgssdp/gssdp-protocol.h:
 	* libgssdp/gssdp-resource-group.c: (message_received_cb):
 	* tests/test-browser.c: (main):
